tests/gen-test/test_out/swap-macro-parse-out.txt
error: expected 'struct' | 'fn' | 'spec' | 'enum' | 'impl' | '#' but got Macro
 --> swap-macro\root.ctl:1:693
  |
1 | use { "water/option" ; "water/macros/tokens" ; } ; struct LastToken { last : MacroToken ; } ; struct TwoTokens { second : MacroToken ; first : MacroToken ; } ; #[macro swap] ; enum Swap { Two : TwoTokens ; Last : LastToken ; Empty ; } ; impl TokenMacro for Swap {     fn new(s : ^ Self, lexer : MacroLexer)     { * s =\Two ~\{ first : lexer.next() ; second : lexer.next() ; } ; }     ; fn next(s : ^ Self, lexer : MacroLexer) -> Option [MacroToken] =>\    Some ~ match * s     {        \Two ~\{ first, second }         { * s =\Last ~\{ last : first } ; second } ;\Last ~\        { last } { * s =\Empty ; last } ;\Empty => return\None ;     } ; fn drop(s : ^ Self) {} ; } ; break ; #[entry] ; swap! swap! fn -> main uint => 0 ;
  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     ^^^^^ token located here
  |
  = info: list -> item

